kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/012_multipleDeclarationFromRequire/My.ecore
<?xml version="1.0" encoding="UTF-8"?>
<ecore:EPackage xmi:version="2.0"
    xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" name="MultipleDeclaration"
    nsURI="MultipleDeclaration" nsPrefix="MultipleDeclaration">
  <eClassifiers xsi:type="ecore:EClass" name="A">
    <eOperations name="toto"/>
  </eClassifiers>
</ecore:EPackage>
